# enum_desc

./: .gitignore  Cargo.toml  README.md
examples/: enum_desc.rs  example1.rs  example2.rs
src/: lib.rs  main.rs
src/enum_desc/: enum_desc_expand.rs  enum_expand.rs  enum_info.rs  mod.rs
src/enum_trs/: enum_trs_expand.rs  mod.rs  trs_info.rs
