[package]
name = "enum_desc"
version = "0.1.5"
authors = ["WanpengHui<hwpok@163.com>"]
description = "A set of column-derived macros is provided to add descriptive information to enumerations and translate enumeration codes"
repository = "https://github.com/hwpok/enum_desc"
license = "MIT"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
syn = { version = "2.0.53", features = ["parsing", "extra-traits","full", "visit"] }
quote ="1.0.35"
